force-app/main/default/objects/Campaign_Asset__c/Campaign_Asset__c.object-meta.xml
<CustomObject>
    <description>Dùng cho Campaign thu hồi sửa chữa</description>
    <label>Campaign Asset</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Campaign Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>