force-app/main/default/objects/Campaign_Asset__c/fields/AfterFrameNo__c.field-meta.xml
<CustomField>
    <fullName>AfterFrameNo__c</fullName>
    <label>After FrameNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>