force-app/main/default/objects/Campaign_Asset__c/fields/ApplicationDealerCode__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDealerCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Dealer Code</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Assets</relationshipLabel>
    <relationshipName>Campaign_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>