force-app/main/default/objects/Campaign_Asset__c/fields/ApplicationPointCode__c.field-meta.xml
<CustomField>
    <fullName>ApplicationPointCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Point Code</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaign Assets (Application Point Code)</relationshipLabel>
    <relationshipName>Campaign_Assets_Point</relationshipName>
    <type>Lookup</type>
</CustomField>