force-app/main/default/objects/Campaign_Asset__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Campaign Assets</relationshipLabel>
    <relationshipName>Campaign_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>