force-app/main/default/objects/Campaign_Asset__c/fields/BeforeFrameNo__c.field-meta.xml
<CustomField>
    <fullName>BeforeFrameNo__c</fullName>
    <label>Before FrameNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>