force-app/main/default/objects/Campaign_Asset__c/fields/Campaign_No__c.field-meta.xml
<CustomField>
    <fullName>Campaign_No__c</fullName>
    <formula>If( !ISBLANK(Campaign__r.Campain_Number__c) &amp;&amp;  !ISBLANK(Asset__r.Frame_Number__c)  ,Campaign__r.Campain_Number__c + &apos;_&apos; + Asset__r.Frame_Number__c, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign No</label>
    <type>Text</type>
</CustomField>