force-app/main/default/objects/Campaign_Asset__c/fields/ClaimApplicationNo__c.field-meta.xml
<CustomField>
    <fullName>ClaimApplicationNo__c</fullName>
    <label>Claim Application No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>