force-app/main/default/objects/Campaign_Asset__c/fields/Date_Joined__c.field-meta.xml
<CustomField>
    <fullName>Date_Joined__c</fullName>
    <label>Date Joined</label>
    <type>DateTime</type>
</CustomField>