force-app/main/default/objects/Campaign_Asset__c/fields/Delear_Code__c.field-meta.xml
<CustomField>
    <fullName>Delear_Code__c</fullName>
    <label>Delear Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>