force-app/main/default/objects/Campaign_Asset__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Campaign Assets</relationshipLabel>
    <relationshipName>Campaign_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>