force-app/main/default/objects/Campaign_Asset__c/fields/Point_Code__c.field-meta.xml
<CustomField>
    <fullName>Point_Code__c</fullName>
    <label>Point Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>